--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,10 +30,11 @@ set -g pane-border-bg colour236
 set -g pane-active-border-fg colour61
 set -g pane-active-border-bg colour61
 
+
 # COPY AND PASTE
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 
 # POSTFIX
