--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,23 +16,13 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 setw -g monitor-activity on
 set -g visual-activity on
-setw -g window-status-format "#{pane_current_path}"
-bind-key '"' split-window -h -c '#{pane_current_path}'
-bind-key '%' split-window -v -c '#{pane_current_path}'
 
 
 # tmux plugin
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-
-# Design
-# set -g pane-border-fg colour236
-# set -g pane-border-bg colour236
-# set -g pane-active-border-fg colour61
-# set -g pane-active-border-bg colour61
+set -g @plugin 'seahal/nord-tmux'
 
 
 # COPY AND PASTE
