--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,14 +22,31 @@ set -g visual-activity on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'seahal/nord-tmux'
 
 
 # COPY AND PASTE
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 
-# POSTFIX
+# Color
+## The modes
+setw -g clock-mode-colour colour117
+setw -g mode-attr bold
+## The panes
+set -g pane-border-bg colour240
+set -g pane-border-fg colour240
+set -g pane-active-border-bg colour235
+set -g pane-active-border-fg colour235
+## The statusbar
+set -g status-bg colour235
+set -g status-left "#[fg=white,bg=green,bold] #S #[fg=green,bg=colour235,nobold,noitalics,nounderscore]"
+set -g window-status-format "#[bg=colour235,fg=colour66,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour66] #[fg=black]#I #[bg=colour66,nobold,noitalics,nounderscore] #[bg=colour66]#W #[fg=colour66,bg=colour235,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[bg=colour235,fg=colour42,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour42]#[fg=black,bg=colour42] #I #[fg=colour2355,bg=colour42,nobold,noitalics,nounderscore] #[fg=black,bg=colour42]#W #[fg=colour42,bg=colour235,nobold,noitalics,nounderscore]"
+set -g window-status-separator ""
+set -g status-right "#{prefix_highlight}#[fg=green,bg=colour235,nobold,noitalics,nounderscore]#[fg=yellow,bg=green,bold] #H "
+setw -g window-status-current-attr bold
+
+
+# POSTFIXr
 run -b '~/.tmux/plugins/tpm/tpm' # this line at the very bottom of tmux.conf
