--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,28 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 setw -g monitor-activity on
 set -g visual-activity on
+set -g base-index 1
+setw -g pane-base-index 1
+
+
+# Color
+## The modes
+setw -g clock-mode-colour colour117
+setw -g mode-attr bold
+## The panes
+set -g pane-border-bg colour237
+set -g pane-border-fg colour240
+set -g pane-active-border-bg colour237
+set -g pane-active-border-fg colour255
+## The statusbar
+set -g status-fg colour108
+set -g status-bg colour235
+set -g status-left "#[fg=colour238,bg=colour214] #S #[fg=colour214,bg=colour235,nobold,noitalics,nounderscore]"
+set -g window-status-format "#[bg=colour237,fg=colour166,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour240] #[fg=colour108]#I #[bg=colour240,nobold,noitalics,nounderscore] #[bg=colour240]#W #[fg=colour240,bg=colour235,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[bg=colour240,fg=colour235,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour235]#[fg=yellow,bg=colour235,bold] #I #[bg=colour235,nobold,noitalics,nounderscore] #[,bg=colour235]#W #[fg=colour235,bg=colour235,nobold,noitalics,nounderscore]"
+set -g window-status-separator ""
+set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
+setw -g window-status-current-attr bold
 
 
 # tmux plugin
@@ -27,25 +49,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # COPY AND PASTE
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
-
-
-# Color
-## The modes
-setw -g clock-mode-colour colour117
-setw -g mode-attr bold
-## The panes
-set -g pane-border-bg colour240
-set -g pane-border-fg colour240
-set -g pane-active-border-bg colour235
-set -g pane-active-border-fg colour235
-## The statusbar
-set -g status-bg colour235
-set -g status-left "#[fg=white,bg=green,bold] #S #[fg=green,bg=colour235,nobold,noitalics,nounderscore]"
-set -g window-status-format "#[bg=colour235,fg=colour66,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour66] #[fg=black]#I #[bg=colour66,nobold,noitalics,nounderscore] #[bg=colour66]#W #[fg=colour66,bg=colour235,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[bg=colour235,fg=colour42,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour42]#[fg=black,bg=colour42] #I #[fg=colour2355,bg=colour42,nobold,noitalics,nounderscore] #[fg=black,bg=colour42]#W #[fg=colour42,bg=colour235,nobold,noitalics,nounderscore]"
-set -g window-status-separator ""
-set -g status-right "#{prefix_highlight}#[fg=green,bg=colour235,nobold,noitalics,nounderscore]#[fg=yellow,bg=green,bold] #H "
-setw -g window-status-current-attr bold
 
 
 # POSTFIXr
