Modified: Alcaritty and tmux settings were updated.

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -371,7 +371,7 @@ key_bindings:
   # Control
   - { key: L,        mods: Control, action: ClearLogNotice               }
   - { key: L,        mods: Control, chars: "\x0c"                        }
-  - { key: Q,         mods: Control, chars: "\x11"                       } # For tmux prefix
+  - { key: Q,        mods: Control, chars: "\x11"                        } # For tmux prefix
   - { key: PageUp,   mods: Control, chars: "\x1b[5;5~"                   }
   - { key: PageDown, mods: Control, chars: "\x1b[6;5~"                   }
   - { key: Left,     mods: Control, chars: "\x1b[1;5D"                   }
@@ -390,7 +390,8 @@ key_bindings:
   - { key: F10,      mods: Control, chars: "\x1b[21;5~"                  }
   - { key: F11,      mods: Control, chars: "\x1b[23;5~"                  }
   - { key: F12,      mods: Control, chars: "\x1b[24;5~"                  }
-  - { key: Space,    mods: Control,   chars: "\x00"                      } # Ctrl + Space
+  - { key: Space,    mods: Control, chars: "\x00"                        } # Ctrl + Space
+  - { key: Minus,    mods: Control, action: None                         } # Ctrl + Minus / Note: I do not like C-- as C-_ 
   # Control|Shift
   - { key: Key2,      mods: Control|Shift, chars: "\x00"                 } # C-@
   # Command
@@ -600,7 +601,11 @@ key_bindings:
   - { key: Grave,     mods: Alt|Shift, chars: "\x1b~"                    } # Alt + ~
   - { key: Minus,     mods: Alt|Shift, chars: "\x1b_"                    } # Alt + _
   - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                    } # Alt + |
-
+# Control|Alt
+#  - { key: Equals,    mods: Control|Alt, chars: "\x1cm="                  } # C-M-=
+#  - { key: Minus,     mods: Control|Alt, chars: "\x3b-"                  } # C-M--
+# Control|Alt|Shift
+#  - { key: Equals,    mods: Control|Alt|Shift, chars: "\x3b+"            } # C-M-+
 
 # Base16 Zenburn 256 - alacritty color config
 #  (based on https://github.com/aaron-williamson/base16-alacritty/blob/master/colors/base16-zenburn-256.yml)
