--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,22 +16,22 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 setw -g monitor-activity on
 set -g visual-activity on
-
+set -g status-position top
 
 # Color
 ## The modes
 setw -g clock-mode-colour colour117
 setw -g mode-attr bold
 ## The panes
-set -g pane-border-bg colour237
-set -g pane-border-fg colour240
-set -g pane-active-border-bg colour237
-set -g pane-active-border-fg colour108
+set -g pane-border-bg colour235
+set -g pane-border-fg colour235
+set -g pane-active-border-bg colour241
+set -g pane-active-border-fg colour241
 ## The statusbar
 set -g status-fg colour108
 set -g status-bg colour235
 set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour235,nobold,noitalics,nounderscore]"
-set -g window-status-format "#[bg=colour237,fg=colour166,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour240] #[fg=colour108]#I #[bg=colour240,nobold,noitalics,nounderscore] #[bg=colour240]#W #[fg=colour240,bg=colour235,nobold,noitalics,nounderscore]"
+set -g window-status-format "#[bg=colour237,fg=colour166,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour240] #[fg=colour108]#I #[bg=colour240,nobold,noitalics,nounderscore] #[bg=colour240]#W #[fg=colour240,bg=colour241,nobold,noitalics,nounderscore]"
 set -g window-status-current-format "#[bg=colour240,fg=colour235,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour235]#[fg=yellow,bg=colour235,bold] #I #[bg=colour235,nobold,noitalics,nounderscore] #[,bg=colour235]#W #[fg=colour235,bg=colour235,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
 set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
