--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,13 +30,11 @@ set -g pane-active-border-fg colour241
 ## The statusbar
 set -g status-fg colour108
 set -g status-bg colour235
-set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour235,nobold,noitalics,nounderscore]"
-set -g window-status-format "#[bg=colour237,fg=colour166,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour240] #[fg=colour108]#I #[bg=colour240,nobold,noitalics,nounderscore] #[bg=colour240]#W #[fg=colour240,bg=colour241,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[bg=colour240,fg=colour235,nobold,noitalics,nounderscore]#[fg=colour235,bg=colour235]#[fg=yellow,bg=colour235,bold] #I #[bg=colour235,nobold,noitalics,nounderscore] #[,bg=colour235]#W #[fg=colour235,bg=colour235,nobold,noitalics,nounderscore]"
-set -g window-status-separator ""
+set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour242,nobold,noitalics,nounderscore] #I #[bg=colour235,fg=colour242,nobold,noitalics,nounderscore] "
+set -g window-status-format "#[fg=colour108,bg=colour235,nobold,noitalics,nounderscore]#W* "
+set -g window-status-current-format "#[fg=colour246,bg=colour235,nobold,noitalics,nounderscore]#W- "
 set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
 setw -g window-status-current-attr bold
-
 
 # tmux plugin
 set -g @plugin 'tmux-plugins/tpm'
