--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,9 +32,10 @@ set -g status-fg colour108
 set -g status-bg colour235
 set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour242,nobold,noitalics,nounderscore] #I #[bg=colour235,fg=colour242,nobold,noitalics,nounderscore] "
 set -g window-status-format "#[fg=colour108,bg=colour235,nobold,noitalics,nounderscore]#W* "
-set -g window-status-current-format "#[fg=colour246,bg=colour235,nobold,noitalics,nounderscore]#W- "
+set -g window-status-current-format "#[fg=colour246,bg=colour235,nobold,noitalics,nounderscore]#W~ "
 set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
 setw -g window-status-current-attr bold
+
 
 # tmux plugin
 set -g @plugin 'tmux-plugins/tpm'
