--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,7 +13,6 @@ set  -g default-command /usr/local/bin/fish
 setw -g mouse on
 set  -gw mode-keys vi
 set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-position top
@@ -31,8 +30,8 @@ set -g pane-active-border-fg colour241
 set -g status-fg colour108
 set -g status-bg colour235
 set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour242,nobold,noitalics,nounderscore] #I #[bg=colour235,fg=colour242,nobold,noitalics,nounderscore] "
-set -g window-status-format "#[fg=colour108,bg=colour235,nobold,noitalics,nounderscore]#W- "
-set -g window-status-current-format "#[fg=colour246,bg=colour235,nobold,noitalics,nounderscore]#W+ "
+set -g window-status-format "#[fg=colour246,bg=colour235,nobold,noitalics,nounderscore]#W "
+set -g window-status-current-format "#[fg=colour108,bg=colour235,nobold,noitalics,nounderscore]*#W* "
 set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
 setw -g window-status-current-attr bold
 
