Update: I modified tmux preferences.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,16 +6,18 @@ bind-key 'C-q' send-prefix
 
 # SYSTEM
 bind r source-file ~/.tmux.conf
-set  -g escape-time 0
-set  -g renumber-windows on
-set  -g default-shell /usr/local/bin/fish
-set  -g default-command /usr/local/bin/fish
+set -g escape-time 0
+set -g renumber-windows on
+set -g default-shell /usr/local/bin/fish
+set -g default-command /usr/local/bin/fish
 setw -g mouse on
-set  -gw mode-keys vi
+set -gw mode-keys vi
 set -g default-terminal "screen-256color"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-position top
+set -g status-interval 1
+
 
 # Color
 ## The modes
@@ -30,8 +32,8 @@ set -g pane-active-border-fg colour241
 set -g status-fg colour108
 set -g status-bg colour235
 set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour242,nobold,noitalics,nounderscore] #I #[bg=colour235,fg=colour242,nobold,noitalics,nounderscore] "
-set -g window-status-format "#[fg=colour246,bg=colour235,nobold,noitalics,nounderscore]#W "
-set -g window-status-current-format "#[fg=colour108,bg=colour235,nobold,noitalics,nounderscore]*#W* "
+set -g window-status-format "#[dim, nobold,noitalics,nounderscore]#W"
+set -g window-status-current-format "#[fg=colour230,bg=colour235,nobold,noitalics,nounderscore]#W#F"
 set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
 setw -g window-status-current-attr bold
 
@@ -47,5 +49,5 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
 
 
-# POSTFIXr
+# POSTFIX
 run -b '~/.tmux/plugins/tpm/tpm' # this line at the very bottom of tmux.conf
