UPDATE: I changed yml file. This is because alacritty 3 requires modification.

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -50,8 +50,16 @@ window:
   #     - transparent: Title bar, transparent background, but no title bar buttons
   decorations: buttonless
 
-  # When true, alacritty starts maximized.
-  start_maximized: false
+  # Startup Mode (changes require restart)
+  #
+  # Values for `startup_mode`:
+  #   - Windowed
+  #   - Maximized
+  #   - Fullscreen
+  #
+  # Values for `startup_mode` (macOS only):
+  #   - SimpleFullscreen
+  startup_mode: Windowed
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -210,9 +218,6 @@ selection:
 
   # When set to `true`, selected text will be copied to the primary clipboard.
   save_to_clipboard: true
-
-# When set to `true`, selected text will be copied to the primary clipboard.
-save_to_clipboard: true
 
 # Allow terminal applications to change Alacritty's window title.
 dynamic_title: true
