--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,18 +16,13 @@ set -g default-terminal "screen-256color"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-position top
-set -g status-interval 1
-
+#set -g status-interval 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Color
 ## The modes
 setw -g clock-mode-colour colour117
-setw -g mode-attr bold
-## The panes
-set -g pane-border-bg colour240
-set -g pane-border-fg colour240
-set -g pane-active-border-bg colour235
-set -g pane-active-border-fg colour235
 ## The statusbar
 set -g status-fg colour108
 set -g status-bg colour235
@@ -35,7 +30,7 @@ set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colou
 set -g window-status-format "#[dim, nobold,noitalics,nounderscore]#W"
 set -g window-status-current-format "#[fg=colour230,bg=colour235,nobold,noitalics,nounderscore]#W#F"
 set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
-setw -g window-status-current-attr bold
+#setw -g window-status-current-attr bold
 
 
 # tmux plugin
