--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,6 @@ set -g default-terminal "screen-256color"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-position top
-#set -g status-interval 1
 set -g base-index 1
 setw -g pane-base-index 1
 
@@ -25,12 +24,11 @@ setw -g pane-base-index 1
 setw -g clock-mode-colour colour117
 ## The statusbar
 set -g status-fg colour108
-set -g status-bg colour235
-set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour242,nobold,noitalics,nounderscore] #I #[bg=colour235,fg=colour242,nobold,noitalics,nounderscore] "
-set -g window-status-format "#[dim, nobold,noitalics,nounderscore]#W"
-set -g window-status-current-format "#[fg=colour230,bg=colour235,nobold,noitalics,nounderscore]#W#F"
-set -g status-right "#[fg=colour237,bg=colour235,nobold,noitalics,nounderscore]#[fg=colour108,bg=colour237] #H "
-#setw -g window-status-current-attr bold
+set -g status-bg colour237
+set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour241,nobold,noitalics,nounderscore] #I #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore] "
+set -g window-status-format "#[fg=colour250, nobold,noitalics,nounderscore]#W"
+set -g window-status-current-format "#[fg=colour214,nobold,noitalics,nounderscore]#W#F"
+set -g status-right "#[fg=colour108] #H "
 
 
 # tmux plugin
