--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,22 +10,21 @@ set -g escape-time 0
 set -g renumber-windows on
 set -g default-shell /usr/local/bin/fish
 set -g default-command /usr/local/bin/fish
-setw -g mouse on
 set -gw mode-keys vi
-set -g default-terminal "screen-256color"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-position top
-set -g base-index 1
-setw -g pane-base-index 1
+set -g default-terminal "xterm-24bits"
+set-option -ga terminal-overrides ",xterm-24bits:Tc"
+
 
 # Color
 ## The modes
 setw -g clock-mode-colour colour117
 ## The statusbar
 set -g status-fg colour108
-set -g status-bg colour237
-set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour241,nobold,noitalics,nounderscore] #I #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore] "
+set -g status-bg colour232
+set -g status-left "#[fg=colour238,bg=colour214,bold] #S #[fg=colour214,bg=colour242,nobold,noitalics,nounderscore] #I #[bg=colour234,fg=colour242,nobold,noitalics,nounderscore] "
 set -g window-status-format "#[fg=colour250, nobold,noitalics,nounderscore]#W"
 set -g window-status-current-format "#[fg=colour214,nobold,noitalics,nounderscore]#W#F"
 set -g status-right "#[fg=colour108] #H "
