--- a/alacritty.toml
+++ b/alacritty.toml
@@ -5,8 +5,12 @@ import = [
 
 
 
-#[shell]
-#program = "/opt/homebrew/bin/zsh"
+[window]
+padding = { x = 3, y = 3 }
+dynamic_padding = true
+blur = true
+opacity = 0.9
+option_as_alt = "None"
 
 
 
@@ -16,7 +20,8 @@ term = "alacritty"
 
 [font]
 size = 12.0
-offset = { x = 0, y = 4 }
+offset = { x = 0, y = 8 }
+glyph_offset = { x = 0, y = 4 }
 
 [font.normal]
 family = "HackGen35 Console NF"
